--- a/style.css
+++ b/style.css
@@ -3,21 +3,27 @@ html {
 }
 a {
     text-decoration: none;
-    color: black;
+    color: #474747;
 }
 #github {
     width: 32px;
     height: 32px;
     border-radius: 50%;
-    margin-top: 4px;
+    margin-top: 7px;
     margin-left: 8px;
+    margin-right: 10px;
+}
+#apps {
+    margin-top: 11px;
+    margin-right: 10px;
+    margin-left: 10px;
 }
 nav {
     height: 60px;
 }
 .buttons {
-    margin: 6px;
-    margin-top: 10px;
+    margin: 10px;
+    margin-top: 15px;
     font-size: 14px;
 }
 .buttons:hover {
@@ -54,11 +60,11 @@ nav {
     width: 522px;
 }
 .input:hover {
-    box-shadow: 0px 0px 5px 2px lightgray;
+    box-shadow: 0px 0px 2px 1px lightgray;
     background-color: white;
 }
 #search-icon:hover > .input {
-    box-shadow: 0px 0px 5px 2px lightgray;
+    box-shadow: 0px 0px 2px 1px lightgray;
     background-color: white;
 }
 #search-icon {
@@ -83,4 +89,7 @@ nav {
     margin-top: 30px;
     border-radius: 5px;
 
+}
+.bottom-buttons:hover {
+    box-shadow: 0px 0px 2px 1px lightgray;
 }
