--- a/style.css
+++ b/style.css
@@ -14,9 +14,11 @@ a {
     margin-right: 10px;
 }
 #apps {
-    margin-top: 11px;
+    margin-top: 5px;
     margin-right: 10px;
     margin-left: 10px;
+    border-radius: 50px;
+    padding: 7px;
 }
 nav {
     height: 60px;
@@ -92,4 +94,8 @@ nav {
 }
 .bottom-buttons:hover {
     box-shadow: 0px 0px 2px 1px lightgray;
+}
+
+#apps:hover {
+    background-color: #ededed;
 }
