--- a/style.css
+++ b/style.css
@@ -95,7 +95,24 @@ nav {
 .bottom-buttons:hover {
     box-shadow: 0px 0px 2px 1px lightgray;
 }
-
 #apps:hover {
     background-color: #ededed;
+}
+
+#footer {
+    position: fixed;
+    width: 100%;
+    background: #ededed;
+    height: 40px;
+    left: 0;
+    bottom: 0;
+}
+.footer-button {
+    font-size: 14px;
+    padding-top: 12px;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+.footer-button:hover {
+    text-decoration: underline;
 }
